--- a/index.html
+++ b/index.html
@@ -1728,6 +1728,7 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->		
 		<!-- Bootstrap core JavaScript -->
+		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="../ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script type="text/javascript" src="view/js/script.js"></script>
 		<script type="text/javascript" src="view/js/bootstrap.min.js"></script>
@@ -1746,5 +1747,4 @@
 		</script>
 	</body>
 
-<!-- Mirrored from www.pascalvangemert.nl/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Feb 2021 11:18:15 GMT -->
 </html>
