--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse navbar-ex1-collapse">
+			<div class="collapse navbar navbar-collapse navbar-ex1-collapse sticky">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#profile">Profile</a></li>
 					<li><a href="#experiences">Experiences</a></li>
