--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar navbar-collapse navbar-ex1-collapse sticky">
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#profile">Profile</a></li>
 					<li><a href="#experiences">Experiences</a></li>
 					<li><a href="#abilities">Abilities</a></li>
-										<li><a href="#projects">Projects</a></li>
+					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
