--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<strong>Location:</strong><br />
 			'Somewhere in Africa, Earth		</p>
 		
-		<a href="https://twitter.com/iamthurpe" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @iamthurpe</a>
+		<a href="https://twitter.com/iamthurpe" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @jthurpe</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 	</div>
 </div>
@@ -1600,7 +1600,7 @@
 				<h3>Makintouch</h3>
 				<p>Makintouch, an IT and Business Mgt. Training Firm</p>
 				<p><strong>Tags:</strong> <br />Development, Wordpress, Bootstrap</p>
-				<a href="http://makintouch.com/" target="_blank">View more</a>
+				<a href="https://makintouch.com/" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
@@ -1634,7 +1634,7 @@
 				<h3>Simple Kanban Board</h3>
 				<p>Built a simple kanban board i use a daily driver</p>
 				<p><strong>Tags:</strong> <br />Development, Javascript, Founder</p>
-				<a href="http://elearning.makintouch.com/" target="_blank">View more</a>
+				<a href="https://elearning.makintouch.com/" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
@@ -1651,7 +1651,7 @@
 				<h3>Makintouch Elearning</h3>
 				<p>An extension of Makintouch online platform for elearning</p>
 				<p><strong>Tags:</strong> <br />Development, Bootstrap, Wordpress</p>
-				<a href="http://elearning.makintouch.com/" target="_blank">View more</a>
+				<a href="https://elearning.makintouch.com/" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
@@ -1677,9 +1677,9 @@
 	<div class="col-md-6">
 		<ul class="no-bullets">
 			<li>
-				<a href="http://twitter.com/jthurpe" target="_blank">
+				<a href="https://twitter.com/jthurpe" target="_blank">
 					<span class="icon icon-twitter"></span>
-					http://twitter.com/thurpe</a>
+					http://twitter.com/jthurpe</a>
 			</li>
 			<li>
 				<a href="https://www.linkedin.com/in/babatope-ifesanya-65980313a/" target="_blank">
@@ -1708,10 +1708,10 @@
 <hr />
 
 <div class="text-center">
-	<iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="http://platform.twitter.com/widgets/tweet_button.c633b87376883931e7436b93bb46a699.en.html#_=1452458429192&amp;dnt=false&amp;id=twitter-widget-1&amp;lang=en&amp;original_referer=http%3A%2F%2Fwebcache.googleusercontent.com%2Fsearch%3Fq%3Dcache%3AcRExpd3vwGsJ%3Awww.pascalvangemert.nl%2F%2B%26cd%3D1%26hl%3Den%26ct%3Dclnk%26gl%3Dnl%26lr%3Dlang_nl%257Clang_en&amp;size=m&amp;text=Pascal%20van%20Gemert%20-%20Web%20Developer%20-%20Interactive%20Resume&amp;type=share&amp;url=http%3A%2F%2Fpascalvangemert.nl%2F%3Fref%3Dtwitter&amp;via=pascalvgemert" style="position: static; visibility: visible; width: 62px; height: 20px;" data-url="http://pascalvangemert.nl/?ref=twitter"></iframe>
+	<iframe id="twitter-widget-1" scrolling="no" frameborder="0" allowtransparency="true" class="twitter-share-button twitter-share-button-rendered twitter-tweet-button" title="Twitter Tweet Button" src="https://platform.twitter.com/widgets/tweet_button.c633b87376883931e7436b93bb46a699.en.html#_=1452458429192&amp;dnt=false&amp;id=twitter-widget-1&amp;lang=en&amp;original_referer=http%3A%2F%2Fwebcache.googleusercontent.com%2Fsearch%3Fq%3Dcache%3AcRExpd3vwGsJ%3Awww.pascalvangemert.nl%2F%2B%26cd%3D1%26hl%3Den%26ct%3Dclnk%26gl%3Dnl%26lr%3Dlang_nl%257Clang_en&amp;size=m&amp;text=Pascal%20van%20Gemert%20-%20Web%20Developer%20-%20Interactive%20Resume&amp;type=share&amp;url=http%3A%2F%2Fpascalvangemert.nl%2F%3Fref%3Dtwitter&amp;via=pascalvgemert" style="position: static; visibility: visible; width: 62px; height: 20px;" data-url="http://pascalvangemert.nl/?ref=twitter"></iframe>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-	<iframe src="https://www.facebook.com/plugins/like.C#, .NET?href=http%3A%2F%2Fpascalvangemert.nl%3Fref%3Dfacebook&amp;width=120&amp;height=21&amp;colorscheme=dark&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=143175172374579" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowtransparency="true"></iframe>
+	<iframe src="https://www.facebook.com/plugins/like.C#, .NET?href=https%3A%2F%2Fpascalvangemert.nl%3Fref%3Dfacebook&amp;width=120&amp;height=21&amp;colorscheme=dark&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=143175172374579" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowtransparency="true"></iframe>
 </div>			</div>
 		</div>
 		
