Added recent projects

--- a/index.html
+++ b/index.html
@@ -1595,13 +1595,58 @@
 		
 	<div class="col-md-6 col-sm-12 col-xs-12">
 		<figure class="effect">
-			<img src="view/images/project_mals.jpg" alt="Mals" />
+			<img src="view/images/hotel_app.png" alt="Mals" />
 			
 			<figcaption>
-				<h3>Makintouch</h3>
-				<p>Makintouch, an IT and Business Mgt. Training Firm</p>
-				<p><strong>Tags:</strong> <br />Development, Wordpress, Bootstrap</p>
-				<a href="https://makintouch.com/" target="_blank">View more</a>
+				<h3>Hotel Booking App</h3>
+				<p>Sheyrooms app using React + Redux + Nodejs</p>
+				<p><strong>Tags:</strong> <br />Development, React, Node.js, Bootstrap 5</p>
+				<a href="https://sheyrooms.herokuapp.com/" target="_blank">View more</a>
+				<span class="icon">
+					<span class="glyphicon glyphicon-new-window"></span>
+				</span>
+			</figcaption> 
+		</figure>
+	</div>
+	<div class="col-md-6 col-sm-12 col-xs-12">
+		<figure class="effect">
+			<img src="view/images/jobs_app.png" alt="Mals" />
+			
+			<figcaption>
+				<h3>Job Application Portal</h3>
+				<p>Sheyjobs app using React + Redux + Nodejs</p>
+				<p><strong>Tags:</strong> <br />Development, React, Node.js, Bootstrap 5</p>
+				<a href="https://sheyjobs.herokuapp.com/" target="_blank">View more</a>
+				<span class="icon">
+					<span class="glyphicon glyphicon-new-window"></span>
+				</span>
+			</figcaption> 
+		</figure>
+	</div>
+	<div class="col-md-6 col-sm-12 col-xs-12">
+		<figure class="effect">
+			<img src="view/images/pizza_app.png" alt="Mals" />
+			
+			<figcaption>
+				<h3>Pizza Booking App</h3>
+				<p>Sheypizza app using React + Redux + Nodejs</p>
+				<p><strong>Tags:</strong> <br />Development, React, Node.js, Bootstrap 5</p>
+				<a href="https://sheypizza.herokuapp.com/" target="_blank">View more</a>
+				<span class="icon">
+					<span class="glyphicon glyphicon-new-window"></span>
+				</span>
+			</figcaption> 
+		</figure>
+	</div>
+	<div class="col-md-6 col-sm-12 col-xs-12">
+		<figure class="effect">
+			<img src="view/images/socialmedia_app.png" alt="Mals" />
+			
+			<figcaption>
+				<h3>Social Media App</h3>
+				<p>Sheygram app using React + Redux + Nodejs</p>
+				<p><strong>Tags:</strong> <br />Development, React, Node.js, Bootstrap 5</p>
+				<a href="https://sheygram.herokuapp.com/" target="_blank">View more</a>
 				<span class="icon">
 					<span class="glyphicon glyphicon-new-window"></span>
 				</span>
@@ -1610,55 +1655,7 @@
 	</div>
 
 		
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="view/images/project_soap.jpg" alt="SOAP - Den Bosch" />
-			
-			<figcaption>
-				<h3>Boldheart Recruitment</h3>
-				<p>Build the website of an international medical recruitment firm</p>
-				<p><strong>Tags:</strong> <br />Design, Development, Bootstrap, Wordpress, Uk</p>
-				<a href="http://boldheartrecruitment.com/" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
-
-		
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="view/images/project_oranjebitter.jpg" alt="Oranjebitter Rotterdam" />
-			
-			<figcaption>
-				<h3>Simple Kanban Board</h3>
-				<p>Built a simple kanban board i use a daily driver</p>
-				<p><strong>Tags:</strong> <br />Development, Javascript, Founder</p>
-				<a href="https://elearning.makintouch.com/" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
-
-		
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="view/images/project_oetelspel.jpg" alt="Oetelspel" />
-			
-			<figcaption>
-				<h3>Makintouch Elearning</h3>
-				<p>An extension of Makintouch online platform for elearning</p>
-				<p><strong>Tags:</strong> <br />Development, Bootstrap, Wordpress</p>
-				<a href="https://elearning.makintouch.com/" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
+	
 
 		
 </div>
